# deep-ion

./: .coverage  .gitignore  README.md
.github/: arquiteto-instructions.md  copilot-instructions.md
.github/agents/: analista-negocios.md  arquiteto-corporativo.md  (+14 more)
agents-engine/: .pre-commit-config.yaml  justfile  pyproject.toml
agents-engine/src/deep_ion/agents_engine/: __init__.py  exceptions.py  settings.py
agents-engine/src/deep_ion/agents_engine/audit/: __init__.py  audit_ledger.py  decision_record.py
agents-engine/src/deep_ion/agents_engine/domain/: __init__.py  models.py  protocols.py
agents-engine/src/deep_ion/agents_engine/infrastructure/: __init__.py  comment_publisher.py  github_client.py  issue_reader.py  label_manager.py
agents-engine/src/deep_ion/agents_engine/providers/: __init__.py  _retry.py  anthropic_provider.py  copilot_provider.py  factory.py  openai_provider.py  protocol.py
agents-engine/tests/: __init__.py  conftest.py
agents-engine/tests/integration/agents_engine/: __init__.py  test_comment_publisher.py  test_github_client.py
agents-engine/tests/unit/: __init__.py
agents-engine/tests/unit/agents_engine/: __init__.py  test_audit_ledger.py  test_decision_record.py  test_exceptions.py  test_provider_factory.py
backoffice/: pom.xml
deep-ion-agents/: .env.example  .gitignore
docs-viewer/: README.md  export-tema.cjs  package-lock.json  package.json
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend-bk/: .env.example  eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
(+587 files in other folders)
