[project]
name = "deep-ion-agents"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.0",
  "pydantic-settings",
  "structlog",
  "httpx",
  "typer",
  "tenacity",
]

[project.optional-dependencies]
anthropic = ["anthropic"]
openai = ["openai"]
copilot = ["azure-ai-inference"]

[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "pytest-httpx",
  "respx",
  "anyio",
  "mypy",
  "ruff",
  "pre-commit",
  "bandit[toml]",
  "types-requests",
]

[project.scripts]
# skill-disc-00 = "deep_ion.discovery.skill_disc_00:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deep_ion"]

[tool.uv]
package = true

[tool.ruff]
line-length = 120
target-version = "py312"
lint.select = ["E", "F", "I", "N", "B", "UP", "PTH", "T20", "TID252", "SIM", "C90", "ANN", "S"]

[tool.mypy]
strict = true
warn_return_any = true
disallow_any_explicit = true
python_version = "3.12"
packages = ["deep_ion"]
mypy_path = ["src"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["deep_ion.agents_engine.domain.models", "deep_ion.agents_engine.settings"]
disallow_any_explicit = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "unit: Fast unit tests, no I/O",
  "integration: Integration tests with mocked external services",
  "e2e: End-to-end tests requiring live GitHub token",
]
addopts = "--cov=src --cov-branch --cov-fail-under=80 --cov-report=term-missing"

[tool.bandit]
targets = ["src"]
severity = "medium"